修复乱码的问题

--- a/zwn/JavaScript/ECMAScript 6 入门/解构.md
+++ b/zwn/JavaScript/ECMAScript 6 入门/解构.md
@@ -1,25 +1,24 @@
 ## 解构
-
-
+
 ```javascript
 res.data =
 {
   id: 1,
   name: 'jon',
   vip:[{
-    vid: 1,
+    vid: 1,
     vname: '至尊VIP'
   },{
-    vid: 2,
+    vid: 2,
     vname: '白金VIP'
   },{
-    vid: 3,
+    vid: 3,
     vname: 'VIP'
   }]
 }
 ```
-在实际业务逻辑中，前端在与后端交互的时候，需要给后端传参从而等到结果
-比如一个获取接口他需要 id VIP等级的vip，通常情况下我们会这样取值
+在实际业务逻辑中，前端在与后端交互的时候，需要给后端传参从而等到结果
+比如一个获取接口他需要 id VIP等级的vip，通常情况下我们会这样取值
 ```javascript
 let data = {
   id: res.data.id
