修复乱码的问题

--- a/zwn/JavaScript/ECMAScript 6 入门/解构.md
+++ b/zwn/JavaScript/ECMAScript 6 入门/解构.md
@@ -5,7 +5,7 @@ res.data =
 {
   id: 1,
   name: 'jon',
-  vip:[{
+  vip:[{
     vid: 1,
     vname: '至尊VIP'
   },{
@@ -18,9 +18,9 @@ res.data =
 }
 ```
 在实际业务逻辑中，前端在与后端交互的时候，需要给后端传参从而等到结果
-比如一个获取接口他需要 id VIP等级的vip，通常情况下我们会这样取值
+比如获取一个接口他需要 id VIP等级的vip，通常情况下我们会这样取值
 ```javascript
-let data = {
+let data = {
   id: res.data.id
   vid: res.data.vip[0].vid
 }
