--- a/daishuaiqing/Go/00笔记/基础.md
+++ b/daishuaiqing/Go/00笔记/基础.md
@@ -19,3 +19,30 @@
     (不建议这样写)
 ## ide 编辑器
     不要再纠结了，就是使用golang
+
+## Go的定义
+    var name type 例如：var userName string,var age int;
+
+    简短定义方式：
+    name := 例如：userName := '张三'，表示声明并赋值（注意：这种方式不可以定义全局变量）
+
+    全局变量（即定义在函数外面的变量）
+
+    变量的默认值：
+    整型：0
+    浮点：0
+    字符串：""
+
+    在Go中，变量定义了就必须要使用，不使用就会报错，导入的包也一样
+
+    常量在程序中定义了可以不使用，不会报错  
+
+## 数组
+    定义：var name [length] type 
+    例如：var a [4] int 定义一个长度为4的数组，数组的存储类型为整型
+    赋值：a[0]=1
+
+    其他创建方式：
+    var a = [3]int{1,2,3}
+
+
