--- a/daishuaiqing/Go/00笔记/基础.md
+++ b/daishuaiqing/Go/00笔记/基础.md
@@ -43,6 +43,19 @@
     赋值：a[0]=1
 
     其他创建方式：
-    var a = [3]int{1,2,3}
+    var a = [3]int{1,2,3} 
+
+    遍历：
+    for i:=0;i<len(arr);i++ {
+
+    } 
+    for index,value := range arr {
+        //index是下标，value是存储的数值
+        //index不使用可以用‘_’代替来舍弃它
+    }
+
+## 数据类型
+    值类型：基础数据类型，数组
+    引用类型：slice
 
 
